--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" >
-
-<head th:replace="~{fragments/head}">
+<head>
 </head>
 
 <body>
-
-<div>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+    <nav
+            th:fragment="navbar"
+            class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
         <a class="navbar-brand" href="/"><img alt="car picture" src="/img/car.png" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto col-12 justify-content-between">
                 <li class="nav-item"
-                    >
+                >
                     <a class="nav-link" href="/brands/all">All Brands</a>
                 </li>
                 <li class="nav-item">
@@ -38,60 +37,25 @@
                         <a class="dropdown-item" href="/">Something else here</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" th:if="${@currentUser.isLogged()}">
                     <div class="form-inline my-2 my-lg-0 border px-3">
-                        <div class="logged-user"
-                             text="Welcome, Gosho"></div>
+                        <div class="logged-user">
+                            Welcome, <th:block th:text="${@currentUser.getFullName()}">Anonymous</th:block>
+                        </div>
                         <a class="nav-link" href="/users/logout">Logout</a>
                     </div>
                 </li>
-                
-                    <li class="nav-item">
-                        <a class="nav-link" href="/users/register">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/users/login">Login</a>
-                    </li>
-                
+
+                <li th:unless="${@currentUser.isLogged()}" class="nav-item">
+                    <a class="nav-link" href="/users/register">Register</a>
+                </li>
+                <li th:unless="${@currentUser.isLogged()}" class="nav-item">
+                    <a class="nav-link" href="/users/login">Login</a>
+                </li>
+
             </ul>
         </div>
     </nav>
-</div>
 
-<div class="container">
-    <h2 class="text-center text-white m-3">All Brands</h2>
-    <div class='row mb-4 d-flex justify-content-around'>
-        <div  class="brand-section col-md-5 mr-auto d-flex flex-column">
-            <h2>Car brand:
-                <span >Brand name</span>
-            </h2>
-            <div>Models:
-                <table>
-                    <tr>
-                        <th>No</th>
-                        <th>Name</th>
-                        <th>Category</th>
-                        <th>Start Year</th>
-                        <th>End Year</th>
-                        <th>Picture</th>
-                    </tr>
-                    <tr>
-                        <th>No</th>
-                        <th >Model Name</th>
-                        <th >Model Category</th>
-                        <th >Model Start Year</th>
-                        <th >Model End Year</th>
-                        <th><img alt="image" src="/"
-                                 class="img-thumbnail rounded"></th>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </div>
-
-    <div>
-             <footer> </footer>
-    </div>
-</div>
 </body>
 </html>
