--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -10,13 +10,15 @@
 
 <div class="container">
     <h2 class="text-center text-white">Login</h2>
-    <form method="POST" 
+    <form th:method="post"
+          th:action="@{/users/login}"
           class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
         <div class="form-group">
             <label for="email" class="text-white font-weight-bold">Email</label>
             <input value="email"
                    id="email"
                    name="email"
+                   th:value="${email}"
                    type="text"
                    class="form-control"
                    placeholder="Email"/>
@@ -28,15 +30,23 @@
                    placeholder="Password"/>
 
         </div>
+        <div class="form-group">
+            <label for="rememberme" class="text-white font-weight-bold">Remember me</label>
+            <input id="rememberme"
+                   name="rememberme"
+                   type="checkbox"
+                   class="form-control"/>
+
+        </div>
         
-        <p class="errors alert alert-danger">
+        <p th:if="${bad_credentials}" class="errors alert alert-danger">
             Invalid username or password.
         </p>
 
         <div class="row">
             <div class="col col-md-4">
                 <div class="button-holder d-flex">
-                    <input type="submit" class="btn btn-info btn-lg" value="Submit Offer"/>
+                    <input type="submit" class="btn btn-info btn-lg" value="Login"/>
                 </div>
             </div>
         </div>
