--- a/src/main/resources/templates/email/registration-email.html
+++ b/src/main/resources/templates/email/registration-email.html
@@ -8,6 +8,6 @@
 <h1>Hello, <th:block th:text="${username}">Pesho</th:block></h1>
 Welcome to Mobilele!
 
-Please follow the link in order to activate your account
+Please follow the <a class="card-link" th:href="@{http://localhost:8080/user/activate(activation_code=*{activation_code})}">link</a> link in order to activate your account
 </body>
 </html>
