Sample test cases.

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="container-fluid">
-  <h5 class="text-center text-white mt-5">Uooops, the thingy that you re looking for is no longer here!</h5>
+  <h5 class="text-center text-white mt-5">Uooops, the thingy that you are looking for is no longer here!</h5>
   <h5 class="text-center text-white mt-5">We are veeery sorry !</h5>
   <img th:src="@{/images/car.png}" alt="Broken car">
   <br/>
