--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -25,7 +25,11 @@
         </div>
         <div class="form-group">
             <label for="password" class="text-white font-weight-bold">Password</label>
-            <input  value="password" id="password" name="password" type="password" min="2"
+            <input  value="password"
+                    id="password"
+                    name="password"
+                    type="password"
+                    min="2"
                    max="20" class="form-control"
                    placeholder="Password"/>
 
