--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -46,14 +46,12 @@
                         <span>• Transmission type</span>
                         <th:block th:text="*{transmission()}">TRANSMISSION</th:block>
                     </div>
-
-
-                    <div class="card-text"><span>• Offer created - TODO</span></div>
-                    <div class="card-text"><span>• Offer modified - TODO </span></div>
-                    <div class="card-text"><span>• Seller - TODO</span></div>
+                    <div class="card-text"><span>• Seller - </span>
+                        <th:block th:text="*{seller()}">Pesho Petrov</th:block>
+                    </div>
                 </li>
             </ul>
-            <div class="card-body" sec:authorize="isAuthenticated()">
+            <div class="card-body" th:if="*{viewerIsOwner()}">
                 <form th:method="delete"
                         th:action="@{/offer/{offerUUID}(offerUUID=*{id})}">
                 <input type="submit" value="Delete" class="link card-link">
