--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -56,6 +56,12 @@
         </div>
     </form>
 </div>
+<div class="container">
+    <a th:href="@{/oauth2/authorization/github}" class="btn">
+        Login with github
+    </a>
+</div>
+
 
 <div>
     <footer> </footer>
