Oauth implementation phase 2

--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -57,7 +57,8 @@
     </form>
 </div>
 <div class="container">
-    <a th:href="@{/oauth2/authorization/github}" class="btn">
+    <a th:href="@{/oauth2/authorization/github}" class="btn btn-block btn-outline-primary">
+        <i class="fab fa-github-f"></i>
         Login with github
     </a>
 </div>
